--- a/mlops/pyproject.toml
+++ b/mlops/pyproject.toml
@@ -25,3 +25,6 @@ include_trailing_comma = true
 virtual_env = "venv"
 
 
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = "test_*.py"
